--- a/.github/workflows/main_kanextjsapp1.yml
+++ b/.github/workflows/main_kanextjsapp1.yml
@@ -1,3 +1,4 @@
+                                                                               
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
@@ -28,13 +29,13 @@ jobs:
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip next.zip ./* .next -qr
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: next.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -58,5 +59,5 @@ jobs:
         with:
           app-name: 'kanextjsapp1'
           slot-name: 'Production'
-          package: .
+          package: next.zip
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8D7BEF1ACC754DBFAD869EE6B6E07713 }}
